--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=remitly2
 
+spring.datasource.url = jdbc:postgres://localhost:8080/
+spring.datasource.username=postgres
+spring.datasource.password=test
+
+spring.jpa.hibernate.ddl-auto = update
